main() can use Java 25 allowed signatures